[project]
name = "reddit-video-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edge-tts>=7.2.7",
    "moviepy>=2.2.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "selenium>=4.41.0",
]
